# tmdbsimple

./: README.md  pyproject.toml
tmdbsimple/: __init__.py  base.py
